[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/SnowBall.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Environment/Throwable_Snowballs.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 19.529

[sub_resource type="Curve" id=2]

min_value = 0.0
max_value = 3.0
bake_resolution = 100
_data = [ Vector2( 0.00285666, 3 ), 0.0, -0.462309, 0, 0, Vector2( 0.995242, 0.0498047 ), -14.8324, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]

flags = 4
width = 2048
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 20.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 1.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 1.0
scale = 1.0
scale_random = 1.0
scale_curve = SubResource( 3 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Initial Velocity", "Scale", "Spread" ]

[node name="SnowBall" type="Area2D" groups=[
"snowball",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
speed = 1000

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 2
hframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="SnowballExplosion" type="Particles2D" parent="." index="2"]

scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 30
lifetime = 5.0
one_shot = true
preprocess = 0.0
speed_scale = 9.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 2 )
normal_map = null
h_frames = 2
v_frames = 2
_sections_unfolded = [ "Process Material", "Time", "Transform" ]

[node name="ParticleTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]


